--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -213,6 +213,34 @@ jobs:
           paths:
             - packages/*.tar.gz
 
+  build-dashr:
+    working_directory: ~/dashr
+    docker:
+      - image: plotly/dashr:ci
+
+    steps:
+      - checkout
+      - run:
+          name: ️️🚧 clone R dependencies
+          command: |
+            git clone --depth 1 https://github.com/plotly/dashR.git -b dev
+            git clone --depth 1 https://github.com/plotly/dash-html-components.git -b dev
+            git clone --depth 1 https://github.com/plotly/dash-core-components.git -b dev
+            git clone --depth 1 https://github.com/plotly/dash-table.git -b dev
+            cd dash-html-components; npm ci && npm run build
+            cd ../dash-core-components; npm ci && npm run build
+            cd ../dash-table; npm ci && npm run build; cd ..
+
+      - run:
+          name: ️️🏭 build core for R 
+          command: |
+            Rscript -e 'dash_desc <- read.dcf("dashR/DESCRIPTION"); dt_version <- read.dcf("dash-table/DESCRIPTION")[,"Version"]; dcc_version <- read.dcf("dash-core-components/DESCRIPTION")[,"Version"]; dhc_version <- read.dcf("dash-html-components/DESCRIPTION")[,"Version"]; imports <- dash_desc[,"Imports"][[1]]; imports <- gsub("((?<=dashHtmlComponents )(\\\\(.*?\\\\)))", paste0("(= ", dhc_version, ")"), imports, perl = TRUE); imports <- gsub("((?<=dashCoreComponents )(\\\\(.*?\\\\)))", paste0("(= ", dcc_version, ")"), imports, perl = TRUE); imports <- gsub("((?<=dashTable )(\\\\(.*?\\\\)))", paste0("(= ", dt_version, ")"), imports, perl = TRUE); dash_desc[,"Imports"][[1]] <- imports; dhc_hash <- system("cd dash-html-components; git rev-parse HEAD | tr -d '\''\n'\''", intern=TRUE); dcc_hash <- system("cd dash-core-components; git rev-parse HEAD | tr -d '\''\n'\''", intern=TRUE); dt_hash <- system("cd dash-table; git rev-parse HEAD | tr -d '\''\n'\''", intern=TRUE); remotes <- dash_desc[,"Remotes"][[1]];  remotes <- gsub("((?<=plotly\\\\/dash-html-components@)([a-zA-Z0-9]+))", dhc_hash, remotes, perl=TRUE); remotes <- gsub("((?<=plotly\\\\/dash-core-components@)([a-zA-Z0-9]+))", dcc_hash, remotes, perl=TRUE); remotes <- gsub("((?<=plotly\\\\/dash-table@)([a-zA-Z0-9]+))", dt_hash, remotes, perl=TRUE); dash_desc[,"Remotes"][[1]] <- remotes; write.dcf(dash_desc, "dashR/DESCRIPTION")'
+            shopt -s extglob
+            cd dash-html-components; rm -rf !(DESCRIPTION|LICENSE.txt|LICENSE|NAMESPACE|.Rbuildignore|R|man|inst|vignettes|build); cd ..
+            cd dash-core-components; rm -rf !(DESCRIPTION|LICENSE.txt|LICENSE|NAMESPACE|.Rbuildignore|R|man|inst|vignettes|build); cd ..
+            cd dash-table; rm -rf !(DESCRIPTION|LICENSE.txt|LICENSE|NAMESPACE|.Rbuildignore|R|man|inst|vignettes|build); cd ..
+            Rscript -e 'install.packages("dash-html-components", type="source", repos=NULL); install.packages("dash-core-components", type="source", repos=NULL); install.packages("dash-table", type="source", repos=NULL); install.packages("dash", type="source", repos=NULL); if (!all(c("dashHtmlComponents", "dashCoreComponents", "dashTable", "dash") %in% installed.packages())) quit(status=1, save="no")'
+
   test-37: &test
     working_directory: ~/dash
     docker:
