--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -227,11 +227,13 @@ jobs:
           command: |
             sudo pip install --upgrade virtualenv --quiet
             python -m venv venv || virtualenv venv && . venv/bin/activate
-            pip install -e ../dash --no-cache-dir -r requires-install.txt -r requires-dev.txt -r requires-testing.txt --progress-bar off
+            cd ../dash
+            pip install -e . --no-cache-dir -r requires-install.txt -r requires-dev.txt -r requires-testing.txt --progress-bar off
 
       - run:
           name: ️️🚧 clone R dependencies
           command: |
+            cd ~/dashr
             . venv/bin/activate
             git clone --depth 1 https://github.com/plotly/dashR.git -b dev
             git clone --depth 1 https://github.com/plotly/dash-html-components.git -b dev
