--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -225,6 +225,7 @@ jobs:
 
       - run:
           name: ️️🏭 build core for R
+          command: |
             . venv/bin/activate
             git clone --depth 1 https://github.com/plotly/dash.git -b dev dash-main
             cd dash-main && pip install -e .[dev,testing] --progress-bar off && cd ..
